--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     SITE DE LOJA DE CELULAR
                 </h2>
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicingelit. Debitis possimus, excepturi doloribus ratione nihil quaerat nostrum? Sunt vitae, 
+                    O site de uma loja de assistência técnica é uma plataforma online que oferece serviços de reparo e manutenção para uma ampla gama de dispositivos eletrônicos. 
                 </p>
                 <div class="rodapedivprojeto" >
                     <div class="partiçao1_projeto" >
@@ -117,10 +117,10 @@
                 <div class="card_projetos" >
                     <img src="imagens/projeto1 (2,1).png" alt="" class="imagemprojeto" >
                     <h2 class="titulo_projeto" >
-                        SITE DE LOJA DE CELULAR
+                        SISTEMA DE ORDEN DE SERVIÇO
                     </h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicingelit. Debitis possimus, excepturi doloribus ratione nihil quaerat nostrum? Sunt vitae, 
+                        Com essa ferramenta, é possível criar uma ordem de serviço, detalhando o problema do aparelho e as informações do cliente.a plataforma oferece um serviço prático e eficiente para a gestão de ordens de serviço em assistências técnicas.
                     </p>
                     <div class="rodapedivprojeto" >
                         <div class="partiçao1_projeto" >
@@ -148,12 +148,14 @@
 
             <div class="Dprojeto"> 
                 <div class="card_projetos" >
-                    <img src="imagens/projeto1 (3).png" alt="" class="imagemprojeto" >
+                    <a href="https://ginathanreis.github.io/relogio/" target="_blank">
+                        <img src="imagens/projeto1 (3).png" alt="" class="imagemprojeto"  >
+                    </a>
                     <h2 class="titulo_projeto" >
-                        SITE DE LOJA DE CELULAR
+                        SITE PARA MOSTRA AS HORAS
                     </h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicingelit. Debitis possimus, excepturi doloribus ratione nihil quaerat nostrum? Sunt vitae, 
+                        O site para mostrar as horas usando JavaScript é uma plataforma online que exibe a hora atual em tempo real, utilizando a linguagem de programação JavaScript. 
                     </p>
                     <div class="rodapedivprojeto" >
                         <div class="partiçao1_projeto" >
@@ -180,12 +182,12 @@
 
             <div class="Dprojeto"> 
                 <div class="card_projetos" >
-                    <img src="imagens/projeto1 (4).png" alt="" class="imagemprojeto" >
+                    <img src="imagens/projeto1-(4).png" alt="" class="imagemprojeto" >
                     <h2 class="titulo_projeto" >
-                        SITE DE LOJA DE CELULAR
+                        SITE PARA BAIXAR JOGOS
                     </h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicingelit. Debitis possimus, excepturi doloribus ratione nihil quaerat nostrum? Sunt vitae, 
+                        O site para baixar jogos é uma plataforma online que oferece uma ampla seleção de jogos para download em vários dispositivos, como computadores e smartphones.
                     </p>
                     <div class="rodapedivprojeto" >
                         <div class="partiçao1_projeto" >
