--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Meu portifolio</title>
 </head>
 <body>
@@ -42,8 +46,8 @@
            
             <img src="imagens/online-education.png" alt="" class="iformaçao" >
         </div>
-        <div class="listformaçao ">
-            <div class="cardformacao" >
+        <div class="listformaçao "   >
+            <div class="cardformacao"  >
             <h2 class="tformçao" > Ensino superior  </h2>
             <p class="pformaçao" >Analise e desenvolvimento de sistema <br>
                 Estituiçao de ensino : Unopar itabela  <br>
@@ -53,7 +57,7 @@
             </div>
 
 
-            <div class="cardformacao" >
+            <div class="cardformacao"  >
                 <h2 class="tformçao" > Curso Tecnico  </h2>
             <p class="pformaçao" >React Native, Python, HTML, CSS,  JavaScriptCompetências <br>
                 Estituiçao de ensino : Trybe <br>
